css added, singleton created and local storage save function

--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -1,5 +1,5 @@
 <form>
-    First name:<br>
+    Task Name:<br>
     <input type="text" name="taskname" id="taskname">
     <br>
     <input type="submit" value="Submit" id="submit">
