--- a/style.css
+++ b/style.css
@@ -1,2 +1,63 @@
 /* Styles go here */
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+* {
+    margin:0;
+    padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+}
 
+body{
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 2.5%;
+}
+#llistat{
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 2.5%;
+}
+.btns{
+    margin-top:20px;
+}
+.btn{
+    padding: 5px;
+}
+input.ranking{
+    width: 100%;
+    
+}
+
+.students{
+    background: #FF5A5F;
+    border: none;
+    color: white;
+    font-size: 20px;
+}
+.students:hover{
+    background: rgb(255, 59, 66);
+}
+.tasks{
+    background: #008489;
+    border: none;
+    color: white;
+    font-size: 20px;
+}
+.tasks:hover{
+    background: #016e72;
+}
+.col3{
+    padding-left: 10px;
+    padding-right: 10px;
+    
+}
+#content{
+    margin: 0 auto;
+    width: 40%;
+}
+.morexp{
+    background: rgb(90, 162, 255);
+    border: none;
+    color: white;
+    font-size: 20px;
+}
