Attitude tasks do it

--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -2,5 +2,8 @@
     Task Name:<br>
     <input type="text" name="taskname" id="taskname">
     <br>
+    Task Description:<br>
+    <input type="text" name="taskdesciption" id="taskdesciption">
+    <br>
     <input type="submit" value="Submit" id="submit">
 </form> 
