--- a/templates/attitudeTasks.html
+++ b/templates/attitudeTasks.html
@@ -1,3 +1,10 @@
 <form>
-    <p>hola</p>
+    <span id="atttask">Attitude Tasks:</span>
+    <select id="mySelect">
+
+    </select>
+    <br>
+    <input type="number" id="pointsatt" name="pointsatt">
+    <br>
+    <input type="submit" value="Submit" id="submit">
 </form>
