--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -5,5 +5,5 @@
     Task Description:<br>
     <input type="text" name="taskdesciption" id="taskdesciption">
     <br>
-    <input type="submit" value="Submit" id="submit">
+    <input type="submit" value="Submit" id="submit" class="btn morexp">
 </form> 
