Upgraded css forms

--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -1,9 +1,16 @@
-<form>
-    Task Name:<br>
-    <input type="text" name="taskname" id="taskname">
-    <br>
-    Task Description:<br>
-    <input type="text" name="taskdesciption" id="taskdesciption">
-    <br>
-    <input type="submit" value="Submit" id="submit" class="btn morexp">
+<form class="addTask">
+    <h1 class="taskTitle">Add Tasks</h4>
+    <div class="taskContent">
+        <div class="fields">
+            <label class="texttask"> Task Name: </label>
+            <input class="inStudent" type="text" name="taskname" id="taskname">
+        </div>
+        <div class="fields">
+            <label class="texttask">Task Description: </label>
+            <input class="inStudent" type="text" name="taskdesciption" id="taskdesciption">
+        </div>
+        <div class="fields">
+            <input type="submit" value="Submit" id="submit" class="btn adds">
+        </div>
+    </div>
 </form> 
