--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     margin: 0 auto;
     text-align: center;
     margin-top: 2.5%;
+    background: rgb(243, 243, 243);
 }
 #llistat, #attlist{
     margin: 0 auto;
@@ -132,3 +133,85 @@ th{
  tr:last-child td:last-child {
     border-bottom-right-radius:3px;
   }
+  .addStudent{
+      padding-bottom: 10px;
+  }
+.studentTitle{
+    background: rgb(255, 59, 66);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color:white;
+    padding:5px;
+    font-size:40px;
+}
+input{
+    width: 80%;
+}
+.studentContent{
+    background: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.textstudent{
+    display:block;
+    text-align:left;
+    padding: 20px;
+    padding-left: 70px;
+    color: rgb(85, 85, 85);
+    
+}
+.inStudent{
+    border: none; /* <-- This thing here */
+    border:solid 1px #ccc;
+    border-radius: 3px;
+    min-height: 50px;
+    background: rgb(243, 243, 243);
+    color: rgb(85, 85, 85);
+    padding-left: 10px;
+}
+.adds{
+    background: var(--skycolor);
+    border: none;
+    color: white;
+    font-size: 20px;
+    margin-top:5px;
+    margin-bottom:5px;
+    border-radius: 5px;
+    max-width: 100px;
+    padding: 10px;
+}
+.texttask{
+    display:block;
+    text-align:left;
+    padding: 20px;
+    padding-left: 70px;
+    color: rgb(85, 85, 85);
+}
+.taskContent{
+    background: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.taskTitle{
+    background: #008489;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color:white;
+    padding:5px;
+    font-size:40px;
+}
+.textatt{
+    display:block;
+    text-align:left;
+    padding: 20px;
+    padding-left: 70px;
+    color: rgb(85, 85, 85);
+}
+.AttitudeTitle{
+    background: var(--skycolor);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color:white;
+    padding:5px;
+    font-size:40px;
+}
