--- a/templates/addformStudent.html
+++ b/templates/addformStudent.html
@@ -1,15 +1,19 @@
-<form class="addStudent">
-    <div class="fields">
-      <label style="display:block">First name: </label>
-      <input type="text" name="firstname" id="firstname" value="Sergio">
+
+  <form class="addStudent">
+      <h1 class="studentTitle">Add Student</h4>
+      <div class="studentContent">
+        <div class="fields">
+          <label class="textstudent">First name: </label>
+          <input class="inStudent" type="text" name="firstname" id="firstname" value="Sergio">
+        </div>
+        <div class="fields">
+          <label class="textstudent"> Last name: </label>
+          <input class="inStudent" type="text" name="lastname" id="lastname" value="Martinez">
+        </div>
+        <div class="fields">
+          <label class="textstudent">Default points: </label>
+          <input class="inStudent" type="number" name="studentPoints" id="studentPoints" value="0">
+        </div>
+        <input type="submit" value="Submit" id="submit" class="btn adds">
     </div>
-    <div class="fields">
-      <label style="display:block"> Last name: </label>
-      <input type="text" name="lastname" id="lastname" value="Martinez">
-    </div>
-    <div class="fields">
-      <label style="display:block">Default points: </label>
-      <input type="number" name="studentPoints" id="studentPoints">
-    </div>
-    <input type="submit" value="Submit" id="submit" class="btn morexp">
-  </form> 
+  </form>
